- fixed user setting icon/glyph alignment

--- a/style.scss
+++ b/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?5s7jhs');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?5s7jhs#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?5s7jhs') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?5s7jhs') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?5s7jhs##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jxsc61');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jxsc61#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?jxsc61') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?jxsc61') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?jxsc61##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
 }
